--- a/weather-planner/package.json
+++ b/weather-planner/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weather-planner",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "isomorphic-fetch": "^3.0.0",
     "next": "^13.4.5",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
