--- a/weather-planner/package.json
+++ b/weather-planner/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & node getWeather.cjs & node getActivities.cjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
