--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "node getWeather.cjs && node getActivities.cjs && next start",
+    "dev": "next dev & node getWeather.cjs & node getActivities.cjs",
+    "build": "next build  & node getWeather.cjs & node getActivities.cjs",
+    "start": "node getWeather.cjs & node getActivities.cjs & next start",
     "lint": "next lint"
   },
   "dependencies": {
