--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,11 @@
     "version": 2,
     "builds": [
       { "src": "getWeather.cjs", "use": "@vercel/node" },
-      { "src": "getActivities.cjs", "use": "@vercel/node" }
+      { "src": "getActivities.cjs", "use": "@vercel/node" },
+      { "src": "pages/index.js", "use": "@vercel/next" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/pages/index.js" }
     ]
-}
+  }
+  
