--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
       { "src": "getWeather.cjs", "use": "@vercel/node" },
       { "src": "getActivities.cjs", "use": "@vercel/node" },
-      { "src": "pages/index.js", "use": "@vercel/next" }
+      { "src": "package.json", "use": "@vercel/next" }
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/pages/index.js" }
