--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & getWeather & getActivities",
     "build": "next build",
     "getWeather": "node getWeather.cjs",
     "getActivities": "node getActivities.cjs",
